--- a/assets/lounge/lounge.css
+++ b/assets/lounge/lounge.css
@@ -646,8 +646,8 @@
 
 .panel-cco > .panel-heading{
     color: #fff;
-    background-color: #f25b20;
-    border-color: #a8a8a8;
+    background-color: #002f70;
+    border-color: #022bff;
 }
 
 
