--- a/front_assets/css/theme-base.css
+++ b/front_assets/css/theme-base.css
@@ -1502,7 +1502,7 @@ body.wide #header.header-fullwidth nav .main-menu .mega-menu-item .dropdown-menu
 -----------------------------------------------------------------*/
 
 #header.header-sticky #header-wrap {
-    background-color: #fff;
+    background-color: #002f70;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     left: 0;
     position: fixed;
